Cycles "Persistent Images" incorrectly retains lighting & mesh data when rendering multiple times / animations. #82129

Closed
opened 2020-10-27 10:37:26 +01:00 by mantissa · 10 comments

System Information
Operating system: Linux-5.8.16_1-x86_64-with-glibc2.17 64 Bits
Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.38.0, 5.8.16_1, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.2.1

Blender Version
Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-26 17:29, hash: edf4378c44, Blender 2.92 Alpha 183c2fe031
Worked: 2.90.1
Caused by 429afe0c62

Short description of error
When using the persistent images option in Cycles, the lighting data doesn't get cleared every time you hit render so it adds on to itself, causing the image to become brighter on every render.

persistent_images_bug.jpg

Additionally, alembic cache mesh data isn't cleared which causes the previous frame of data to also be visible, the animation shows this clearly.
You can see the mesh persisting each frame as well as the scene becoming brighter, light brightness is not animated in this example.
The data is a little too persistent, basically. :)

0001-0060.mp4

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

  • Switch to Cycles render engine
  • Enable persistent images
  • Render in slot 1
  • Render again in slot 2
  • New render is brighter / light data is duplicated
**System Information** Operating system: Linux-5.8.16_1-x86_64-with-glibc2.17 64 Bits Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.38.0, 5.8.16_1, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.2.1 **Blender Version** Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-26 17:29, hash: `edf4378c44`, Blender 2.92 Alpha 183c2fe0314b Worked: 2.90.1 Caused by 429afe0c62 **Short description of error** When using the persistent images option in Cycles, the lighting data doesn't get cleared every time you hit render so it adds on to itself, causing the image to become brighter on every render. ![persistent_images_bug.jpg](https://archive.blender.org/developer/F9109456/persistent_images_bug.jpg) Additionally, alembic cache mesh data isn't cleared which causes the previous frame of data to also be visible, the animation shows this clearly. You can see the mesh persisting each frame as well as the scene becoming brighter, light brightness is not animated in this example. The data is a little *too* persistent, basically. :) [0001-0060.mp4](https://archive.blender.org/developer/F9109488/0001-0060.mp4) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] - Switch to Cycles render engine - Enable persistent images - Render in slot 1 - Render again in slot 2 - New render is brighter / light data is duplicated
Author

Added subscriber: @Mantissa

Added subscriber: @Mantissa
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 429afe0c62

Caused by 429afe0c62

Added subscriber: @Harvester

Added subscriber: @Harvester

Added subscribers: @kevindietrich, @brecht

Added subscribers: @kevindietrich, @brecht
CC @kevindietrich.

This issue was referenced by blender/cycles@50c7e459d7

This issue was referenced by blender/cycles@50c7e459d7bfa4abf63d354130b10b019ecdb310

This issue was referenced by 8c3d42bd0f

This issue was referenced by 8c3d42bd0f0160ba58c6a932c0e4c228ce6b0426

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2020-10-29 17:44:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82129
No description provided.